# PoolAlloc

./: .gitignore  CMakeLists.txt  README.md
include/GearAlloc/: gear_alloc.hpp  priv.h
src/: core.c  test.cpp
